--- a/src/styles/_vars.module.scss
+++ b/src/styles/_vars.module.scss
@@ -1,14 +1,25 @@
 /// 定義全域色票
-$var_colors: (
+$theme-light: (
   "primary": #699eee,
   "secondary": #de33c3,
   "black": #000000,
   "white": #ffffff,
 );
 
+/// 定義全域色票
+$theme-dark: (
+  "primary": #192b47,
+  "secondary": #722366,
+  "black": #000000,
+  "white": #ffffff,
+);
+
 /// 輸出變數模組
 :export {
-  @each $key, $value in $var_colors {
-    #{unquote($key)}: $value;
+  @each $key, $value in $theme-light {
+    #{'light-'+unquote($key)}: $value;
+  }
+  @each $key, $value in $theme-dark {
+    #{'dark-'+unquote($key)}: $value;
   }
 }
